For safety provide a default constructor for WindowFeatures(). ContextMenuController.cpp: createNewWindow as well as QWebPage need to create a default initialized WindowFeatures object on the fly.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27568 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Maciej.
+
+        For safety provide a default constructor for WindowFeatures().
+        ContextMenuController.cpp: createNewWindow as well as QWebPage need to
+        create a default initialized WindowFeatures object on the fly.
+
+        * bridge/WindowFeatures.h:
+        (WebCore::WindowFeatures::WindowFeatures):
+
 2007-11-07  Simon Hausmann  <shausman@trolltech.com>
 
         Reviewed by Lars.
