Reviewed by Kevin Decker.
        Build fix for Leopard.  Cast a size() as int to unsigned for proper
        comparison.

        * bindings/js/JSHTMLDocumentCustom.cpp:
        (WebCore::writeHelper):
        Casted an int to unsigned for an unsigned to unsigned comparison.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27578 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-07  Tristan O'Tierney  <tristan@apple.com>
+
+        Reviewed by Kevin Decker.
+
+        Build fix for Leopard.  Cast a size() as int to unsigned for proper
+        comparison.
+
+        * bindings/js/JSHTMLDocumentCustom.cpp:
+        (WebCore::writeHelper):
+        Casted an int to unsigned for an unsigned to unsigned comparison.
+
 2007-11-07  Brady Eidson  <beidson@apple.com>
 
         Rubberstamped by Sam
