--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,22 @@
+2007-11-07  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - fix <rdar://problem/5523503> Safari crashes clicking scroll bar in FaceBook 'Trips'
+
+        Layers and listboxes are two kinds of ScrollBarClient that can be
+        removed while the scrollbar is tracking the mouse. The scrollbar is not
+        destroyed until later, and meanwhile it can try to call the client,
+        which results in a crash.
+
+        * manual-tests/stale-scrollbar-client-crash.html: Added.
+        * platform/ScrollBar.h:
+        (WebCore::Scrollbar::setClient): Added.
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::destroyScrollbar): Call Scrollbar::setClient().
+        * rendering/RenderListBox.cpp:
+        (WebCore::RenderListBox::~RenderListBox): Ditto.
+
 2007-11-07  Adam Roben  <aroben@apple.com>
 
         Fix <rdar://5569268> Crash when opening any FTP site in second tab/window
