2007-11-08  Mark Rowe  <mrowe@apple.com>
       Build fix for case-sensitive file systems.  Fix case of file names
       in #include's.

        * html/HTMLMediaElement.cpp:
        * platform/graphics/Movie.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27597 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-08  Mark Rowe  <mrowe@apple.com>
+
+       Build fix for case-sensitive file systems.  Fix case of file names
+       in #include's.
+
+        * html/HTMLMediaElement.cpp:
+        * platform/graphics/Movie.cpp:
+
 2007-11-08  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
 
         Reviewed by Lars Knoll <lars@trolltech.com>.
