2007-11-08  Mark Rowe  <mrowe@apple.com>
        Fix the Gtk, Qt and Wx builds.

        * platform/gtk/TemporaryLinkStubs.cpp:
        * platform/qt/TemporaryLinkStubs.cpp:
        * platform/wx/TemporaryLinkStubs.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27601 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,13 @@
 2007-11-08  Mark Rowe  <mrowe@apple.com>
 
+        Fix the Gtk, Qt and Wx builds.
+
+        * platform/gtk/TemporaryLinkStubs.cpp:
+        * platform/qt/TemporaryLinkStubs.cpp:
+        * platform/wx/TemporaryLinkStubs.cpp:
+
+2007-11-08  Mark Rowe  <mrowe@apple.com>
+
         Not reviewed.  Fix two instances of includes using the wrong case in the filename.
 
         * platform/graphics/mac/MoviePrivateQTKit.mm:
