--- a/JavaScriptGlue/ChangeLog
+++ b/JavaScriptGlue/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-08  Mark Rowe  <mrowe@apple.com>
+
+        Build fix.
+
+        * ForwardingHeaders/wtf/MathExtras.h: Copied from WebCore/ForwardingHeaders/wtf/MathExtras.h.
+
 2007-11-05  Geoffrey Garen  <ggaren@apple.com>
 
         Build fix.
