2007-11-08  Mark Rowe  <mrowe@apple.com>
        Build fix for JavaScriptGlue.

        * wtf/MathExtras.h: Include stdlib.h for srand and RAND_MAX.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27605 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-08  Mark Rowe  <mrowe@apple.com>
+
+        Build fix for JavaScriptGlue.
+
+        * wtf/MathExtras.h: Include stdlib.h for srand and RAND_MAX.
+
 2007-11-08  Darin Adler  <darin@apple.com>
 
         - Windows build fix
