--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-08  Adam Roben  <aroben@apple.com>
+
+        Fix a precedence warning on Windows
+
+        * kjs/JSImmediate.h:
+        (KJS::JSImmediate::toBoolean):
+
 2007-11-08  Mark Rowe  <mrowe@apple.com>
 
         Build fix for JavaScriptGlue.
