Windows build fix
        Reviewed by Sam and Ada.

        * wtf/MathExtras.h: Get rid of a circular #include dependency to fix
        the build.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27607 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-08  Adam Roben  <aroben@apple.com>
 
+        Windows build fix
+
+        Reviewed by Sam and Ada.
+
+        * wtf/MathExtras.h: Get rid of a circular #include dependency to fix
+        the build.
+
+2007-11-08  Adam Roben  <aroben@apple.com>
+
         Fix a precedence warning on Windows
 
         * kjs/JSImmediate.h:
